# systray-gsync-toggle

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
resources/: app.manifest  resource.h  windows.rc
src/: CMakeLists.txt  app.rc  main.cpp  resources.qrc
